KSENROLL-12774 - Turn off Section Level messaging and fix page level - Fixed the spacing issue
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-core/trunk@69930 0ac02d80-fb3f-11dc-a574-c57244a850eb

--- a/ks-common/ks-common-web/src/main/webapp/themes/ksboot/stylesheets/enroll.less
+++ b/ks-common/ks-common-web/src/main/webapp/themes/ksboot/stylesheets/enroll.less
@@ -2152,6 +2152,11 @@ section.uif-disclosure {
   display: inline;
 }
 
+.uif-pageHeader, .uif-sectionHeader {
+   min-height: initial;
+}
+
+
 /* Code for this p:additionalCssClasses="ks-uif-label-inline"  localed in KSENROLL-12932 */
 .ks-uif-label-inline .uif-label{
     display: inline;
